--- a/brie-5 Site web pour une entreprise de location/html/gallery.html
+++ b/brie-5 Site web pour une entreprise de location/html/gallery.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../gallery.css">
+    <link rel="stylesheet" href="../sass&css/gallery.css">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda+One|Shojumaru&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Merienda+One|Roboto&display=swap" rel="stylesheet">    <title>Document</title>
 </head>
