--- a/brie-5 Site web pour une entreprise de location/html/home.html
+++ b/brie-5 Site web pour une entreprise de location/html/home.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../home.css">
+    <link rel="stylesheet" href="../sass&css/home.css">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda+One|Shojumaru&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Roboto&display|Berkshire+Swash&display=swap" rel="stylesheet">    
     <title>Document</title>
