--- a/brie-5 Site web pour une entreprise de location/html/home.html
+++ b/brie-5 Site web pour une entreprise de location/html/home.html
@@ -9,17 +9,20 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="topNav">
-        <div class="logo">
-            <p>Kainouch<span>Cars</span></p>
-        </div>
-        <ul>
-            <li><a href="home.html">ACCUEIL</a> </li>
-            <li><a href="gallery.html">GALLERY</a> </li>
-            <li><a href="reservation.html">RESERVATION</a> </li>
-        </ul>
-        <button onclick="window.location.href='inscription.html'">Se connecter/S’inscrire</button>
-
+    <nav>
+        <input type="checkbox" id="checkNav">
+        <label id="checkNavBtn" for="checkNav"><img src="../icons/iconMenu.png" alt="" width="24px"></label>
+        <div id="topNav">
+                <div class="logo">
+                <p>Kainouch<span>Cars</span></p>
+                </div>
+                <ul>
+                    <li><a href="home.html">ACCUEIL</a> </li>
+                    <li><a href="gallery.html">GALLERY</a> </li>
+                    <li><a href="reservation.html">RESERVATION</a> </li>
+                </ul>
+                <button onclick="window.location.href='inscription.html'">Se connecter/S’inscrire</button>
+            </div>
     </nav>
     <nav class="sideNav">
         <div class="themeContainer" id="themeContainer">
