--- a/brie-5 Site web pour une entreprise de location/html/home.html
+++ b/brie-5 Site web pour une entreprise de location/html/home.html
@@ -3,73 +3,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../sass&css/home.css">
+    <link rel="stylesheet" href="../style/home.css">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Merienda+One|Shojumaru&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Roboto&display|Berkshire+Swash&display=swap" rel="stylesheet">    
-    <title>Document</title>
+    <title>KainouchCars</title>
 </head>
 <body>
     <nav>
         <input type="checkbox" id="checkNav">
         <label id="checkNavBtn" for="checkNav"><img src="../icons/iconMenu.png" alt="" width="24px"></label>
         <div id="topNav">
-                <div class="logo">
-                <p>Kainouch<span>Cars</span></p>
-                </div>
-                <ul>
-                    <li><a href="home.html">ACCUEIL</a> </li>
-                    <li><a href="gallery.html">GALLERY</a> </li>
-                    <li><a href="reservation.html">RESERVATION</a> </li>
-                </ul>
-                <button onclick="window.location.href='inscription.html'">Se connecter/S’inscrire</button>
+            <div class="logo">
+            <p>Kainouch<span>Cars</span></p>
             </div>
-    </nav>
-    <nav class="sideNav">
-        <div class="themeContainer" id="themeContainer">
-            <div class="theme">
-               <div class="color" id="color1"></div>
-                <div class="del">
-                    <div class="moins"></div>
-                </div>
-            </div>
-            <div class="theme">
-                <div class="color" id="color2"> </div>
-                <div class="del">
-                    <div class="moins"></div>
-                </div>
-            </div>
-            <div class="theme">
-                <div class="color" id="color3"> </div>
-                <div class="del">
-                    <div class="moins"></div>
-                </div>
-            </div>
-            <div class="theme">
-                <div class="color" id="color4"> </div>
-                <div class="del">
-                    <div class="moins"></div>
-                </div>
-            </div>
-            <div class="theme">
-                <input type="text">
-                <div class="add">
-                    <div class="plus1"></div>
-                    <div class="plus2"></div>
-                </div>
-            </div>
-        </div>        
-        <div class="clickable" onclick="displayContainer()"></div>
+            <ul>
+                <li><a href="home.html">ACCUEIL</a> </li>
+                <li><a href="gallery.html">GALLERY</a> </li>
+            </ul>
+            <button onclick="window.location.href='inscription.html'">Se connecter/S’inscrire</button>
+        </div>
     </nav>
     <header>
-        <div class="imgDiv"></div>
-        <div class="discriptiondiv">
-            <p>We're here <i>to get you there.</i></p>
-            <p>VIVEZ UNE EXPÉRIENCE INOUBLIABLE DE CONDUITE SUR GLACE AVEC KainouchCars</p>
-            <p class="lastParagraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae adipisci dignissimos, 
-                eum suscipit sapiente soluta et nemo at repellendus doloribus nam? 
-                Consequatur molestias ab inventore facilis corporis animi cupiditate nesciunt.
-            </p>
+        <div class="imgDiv">
+            <div class="discriptiondiv">
+                <p>We're here <i>to get you there.</i></p>
+                <p>VIVEZ UNE EXPÉRIENCE INOUBLIABLE DE CONDUITE SUR GLACE AVEC KainouchCars</p>
+                <p class="lastParagraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae adipisci dignissimos, 
+                    eum suscipit sapiente soluta et nemo at repellendus doloribus nam? 
+                    Consequatur molestias ab inventore facilis corporis animi cupiditate nesciunt.
+                </p>
+            </div>
         </div>
+        
     </header>
     <section class="homeSection"></section>
     
